force-app/main/default/objects/Enrolment__c/Enrolment__c.object-meta.xml
<CustomObject>
    <label>Enrolment</label>
    <nameField>
        <label>Enrolment No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrolments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>