force-app/main/default/objects/Enrolment__c/fields/Actual_Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Date_Time__c</fullName>
    <description>this field for piano rental for manage customer actual Delivery datetime after sign panda doc</description>
    <label>Actual Delivery Date/Time</label>
    <type>DateTime</type>
</CustomField>