force-app/main/default/objects/Enrolment__c/fields/Additional_Delivery_comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Delivery_comments__c</fullName>
    <description>this field for piano rental for manage customer Delivery comment</description>
    <label>Additional Delivery comments</label>
    <type>TextArea</type>
</CustomField>