force-app/main/default/objects/Enrolment__c/fields/Advance_Action_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Advance_Action_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Action Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrolments1</relationshipName>
    <type>Lookup</type>
</CustomField>