force-app/main/default/objects/Enrolment__c/fields/Advance_Action_Summary__c.field-meta.xml
<CustomField>
    <fullName>Advance_Action_Summary__c</fullName>
    <formula>/* CASE( Package_Process_Type__c , 
&apos;Cancellation&apos;,  HYPERLINK( $Label.Aureus_Site+ &apos;/WithdrawlSummary?id=&apos;+Id , &apos;Cancellation Summary&apos; ) ,
 &apos;&apos;)
*/

HYPERLINK( $Label.Aureus_Site+ &apos;/WithdrawlSummary?id=&apos;+Id+&apos;&amp;bypass=true&apos; , &apos;Cancellation Summary&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Action Summary</label>
    <type>Text</type>
</CustomField>