force-app/main/default/objects/Enrolment__c/fields/Aggrement_Id__c.field-meta.xml
<CustomField>
    <fullName>Aggrement_Id__c</fullName>
    <label>Aggrement Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>