force-app/main/default/objects/Enrolment__c/fields/App_User_TEST__c.field-meta.xml
<CustomField>
    <fullName>App_User_TEST__c</fullName>
    <formula>Parent__r.App_Portal_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App User TEST</label>
    <type>Checkbox</type>
</CustomField>