force-app/main/default/objects/Enrolment__c/fields/Available_Make_up_mins__c.field-meta.xml
<CustomField>
    <fullName>Available_Make_up_mins__c</fullName>
    <description>this field for manage ossia Student Makeup Mins</description>
    <inlineHelpText>this field for manage ossia Organization Student Makeup Mins</inlineHelpText>
    <label>Available Make-up mins</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>