force-app/main/default/objects/Enrolment__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <description>this field for piano rental for manage customer  block number</description>
    <label>Block</label>
    <length>50</length>
    <type>Text</type>
</CustomField>