force-app/main/default/objects/Enrolment__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>this field for piano rental for manage Brand</description>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>