force-app/main/default/objects/Enrolment__c/fields/Building_name__c.field-meta.xml
<CustomField>
    <fullName>Building_name__c</fullName>
    <description>this field for piano rental for manage customer building name</description>
    <label>Building name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>