force-app/main/default/objects/Enrolment__c/fields/Camp__c.field-meta.xml
<CustomField>
    <fullName>Camp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for Camp Class  for manage camp Id</description>
    <label>Camp</label>
    <referenceTo>Camp__c</referenceTo>
    <relationshipLabel>Enrolments</relationshipLabel>
    <relationshipName>Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>