force-app/main/default/objects/Enrolment__c/fields/Cancellation_Policy_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Policy Agreed</label>
    <type>Checkbox</type>
</CustomField>