force-app/main/default/objects/Enrolment__c/fields/Center_Address__c.field-meta.xml
<CustomField>
    <fullName>Center_Address__c</fullName>
    <formula>Center__r.BillingStreet &amp; &quot; &quot; &amp; Center__r.BillingCity &amp; &quot; &quot; &amp; Center__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Center Address</label>
    <type>Text</type>
</CustomField>