force-app/main/default/objects/Enrolment__c/fields/Center_Email__c.field-meta.xml
<CustomField>
    <fullName>Center_Email__c</fullName>
    <formula>Center__r.Center_Email__c</formula>
    <label>Center Email</label>
    <type>Text</type>
</CustomField>