force-app/main/default/objects/Enrolment__c/fields/Center_Name_Internal__c.field-meta.xml
<CustomField>
    <fullName>Center_Name_Internal__c</fullName>
    <description>Internal field for Pardot functions</description>
    <formula>Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Center Name</label>
    <type>Text</type>
</CustomField>