force-app/main/default/objects/Enrolment__c/fields/Center_Phone__c.field-meta.xml
<CustomField>
    <fullName>Center_Phone__c</fullName>
    <formula>Center__r.Phone</formula>
    <label>Center Phone</label>
    <type>Text</type>
</CustomField>