force-app/main/default/objects/Enrolment__c/fields/Country_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Country_Sharing__c</fullName>
    <label>Country-Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>