force-app/main/default/objects/Enrolment__c/fields/Current_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Current_Deposit__c</fullName>
    <formula>Package__r.Deposit_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>