force-app/main/default/objects/Enrolment__c/fields/Delivery_Charges__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charges__c</fullName>
    <description>this field for piano rental for manage customer Delivery charges</description>
    <label>Delivery Charges (2-way)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>