force-app/main/default/objects/Enrolment__c/fields/Delivery_Option_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_Date_1__c</fullName>
    <description>this field for piano rental for manage customer Delivery 1st Option  Date</description>
    <label>Delivery Option Date 1</label>
    <type>Date</type>
</CustomField>