force-app/main/default/objects/Enrolment__c/fields/Delivery_Option_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_Date_2__c</fullName>
    <description>this field for piano rental for manage customer Delivery 2ed Option  Date</description>
    <label>Delivery Option Date 2</label>
    <type>Date</type>
</CustomField>