force-app/main/default/objects/Enrolment__c/fields/Delivery_Option_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_Date_3__c</fullName>
    <description>this field for piano rental for manage customer Delivery 3rd Option  Date</description>
    <label>Delivery Option Date 3</label>
    <type>Date</type>
</CustomField>