force-app/main/default/objects/Enrolment__c/fields/Delivery_Option_Timeslot_1__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_Timeslot_1__c</fullName>
    <description>this field for piano rental for manage customer Delivery 1st Option  time slot</description>
    <label>Delivery Option Timeslot 1</label>
    <type>Time</type>
</CustomField>