force-app/main/default/objects/Enrolment__c/fields/Delivery_Option_Timeslot_2__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_Timeslot_2__c</fullName>
    <description>this field for piano rental for manage customer Delivery 2ed Option  time slot</description>
    <label>Delivery Option Timeslot 2</label>
    <type>Time</type>
</CustomField>