force-app/main/default/objects/Enrolment__c/fields/Delivery_Option_Timeslot_3__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_Timeslot_3__c</fullName>
    <description>this field for piano rental for manage customer Delivery 3rd Option  time slot</description>
    <label>Delivery Option Timeslot 3</label>
    <type>Time</type>
</CustomField>