force-app/main/default/objects/Enrolment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>IF(Text(prepayment_period_end_date__c) = NULL,&apos;&apos;,CASE( 
MOD( prepayment_period_end_date__c - DATE( 1900, 1, 7 ), 7 ), 
0, &quot;Sun&quot;, 
1, &quot;Mon&quot;, 
2, &quot;Tue&quot;, 
3, &quot;Wed&quot;, 
4, &quot;Thur&quot;, 
5, &quot;Fri&quot;, 
&quot;Sat&quot; 
)+&apos;, &apos;+ Text(Day(prepayment_period_end_date__c)) +&apos; &apos;+CASE( 
MONTH( prepayment_period_end_date__c ), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
&quot;Dec&quot; 
)+&apos; &apos;+ Text(Year(prepayment_period_end_date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Text</type>
</CustomField>