force-app/main/default/objects/Enrolment__c/fields/Enr_Number_backend__c.field-meta.xml
<CustomField>
    <fullName>Enr_Number_backend__c</fullName>
    <displayFormat>Enr-{0000}</displayFormat>
    <label>Enr Number(backend)</label>
    <type>AutoNumber</type>
</CustomField>