force-app/main/default/objects/Enrolment__c/fields/Enrolment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Created_Date__c</fullName>
    <label>Enrolment Created Date</label>
    <type>DateTime</type>
</CustomField>