force-app/main/default/objects/Enrolment__c/fields/Enrolment_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Email_Date__c</fullName>
    <label>Enrolment Email Date</label>
    <type>DateTime</type>
</CustomField>