force-app/main/default/objects/Enrolment__c/fields/Enrolment_Source__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Source__c</fullName>
    <description>Enrolment Source of Pardot for case object</description>
    <label>Enrolment Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>