force-app/main/default/objects/Enrolment__c/fields/Extra_Stairs__c.field-meta.xml
<CustomField>
    <fullName>Extra_Stairs__c</fullName>
    <description>this field for piano rental for manage customer additional stairs according to packer</description>
    <label>Extra Stairs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>