force-app/main/default/objects/Enrolment__c/fields/Final_Delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Final_Delivery_date__c</fullName>
    <description>this field for piano rental for manage customer final Delivery date</description>
    <label>Final Delivery date</label>
    <type>Date</type>
</CustomField>