force-app/main/default/objects/Enrolment__c/fields/Final_Delivery_Timeslot__c.field-meta.xml
<CustomField>
    <fullName>Final_Delivery_Timeslot__c</fullName>
    <description>this field for piano rental for manage customer final Delivery  time slot</description>
    <label>Final Delivery Timeslot</label>
    <type>Time</type>
</CustomField>