force-app/main/default/objects/Enrolment__c/fields/Food_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Food_Allergy__c</fullName>
    <description>This Filed used For Student Food Allergy.</description>
    <formula>Student__r.Food_Allergy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food Allergy</label>
    <type>Text</type>
</CustomField>