force-app/main/default/objects/Enrolment__c/fields/House_type__c.field-meta.xml
<CustomField>
    <fullName>House_type__c</fullName>
    <description>this field for piano rental for select customer house type</description>
    <label>House type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>HDB</fullName>
            </value>
            <value>
                <fullName>Landed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>