force-app/main/default/objects/Enrolment__c/fields/I_want_to_receive_latest_newsletter__c.field-meta.xml
<CustomField>
    <fullName>I_want_to_receive_latest_newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I want to receive latest newsletter</label>
    <type>Checkbox</type>
</CustomField>