force-app/main/default/objects/Enrolment__c/fields/Initial_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Inspection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field for piano rental for manage customer Initial Inspection Completed after submit Inspection report</description>
    <label>Initial Inspection Completed</label>
    <type>Checkbox</type>
</CustomField>