force-app/main/default/objects/Enrolment__c/fields/IsBookingCreated__c.field-meta.xml
<CustomField>
    <fullName>IsBookingCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is only used for create booking for first time. When enrolment data is loading from the Data loader.</description>
    <label>IsBookingCreated</label>
    <type>Checkbox</type>
</CustomField>