force-app/main/default/objects/Enrolment__c/fields/Last_Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reschedule_Date__c</fullName>
    <description>This field is used for create missing booking, This field can be removed once reschedule process fixed.</description>
    <label>Last Reschedule Date</label>
    <type>Date</type>
</CustomField>