force-app/main/default/objects/Enrolment__c/fields/Last_Reschedule_Date_For_Month_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Last_Reschedule_Date_For_Month_Last_Week__c</fullName>
    <description>This field is used for create missing booking, This field can be removed once reschedule process fixed for last week of the month</description>
    <label>Last Reschedule Date For Month Last Week</label>
    <type>Date</type>
</CustomField>