force-app/main/default/objects/Enrolment__c/fields/Lesson_Mode__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Mode__c</fullName>
    <label>Lesson Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lesson_Mode</valueSetName>
    </valueSet>
</CustomField>