force-app/main/default/objects/Enrolment__c/fields/Lesson_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Start_time__c</fullName>
    <label>Lesson Start Time</label>
    <type>Time</type>
</CustomField>