force-app/main/default/objects/Enrolment__c/fields/Lessons_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Start_Date__c</fullName>
    <inlineHelpText>Enrolment first lesson date</inlineHelpText>
    <label>Lessons Start Date</label>
    <type>Date</type>
</CustomField>