force-app/main/default/objects/Enrolment__c/fields/Link_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Link_Creation_Date__c</fullName>
    <label>Link Creation Date</label>
    <type>DateTime</type>
</CustomField>