force-app/main/default/objects/Enrolment__c/fields/Minimum_Rental_Commitment_Period__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Rental_Commitment_Period__c</fullName>
    <description>this field for piano rental for manage customer Minimum rental commitment period,</description>
    <label>Minimum Rental Commitment Period</label>
    <type>Date</type>
</CustomField>