force-app/main/default/objects/Enrolment__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>this field for piano rental for manage customer selected modal</description>
    <label>Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>