force-app/main/default/objects/Enrolment__c/fields/New_Centre__c.field-meta.xml
<CustomField>
    <fullName>New_Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for track new changed center id</description>
    <label>New Centre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrolments (New Centre)</relationshipLabel>
    <relationshipName>Enrolments7</relationshipName>
    <type>Lookup</type>
</CustomField>