force-app/main/default/objects/Enrolment__c/fields/New_Class__c.field-meta.xml
<CustomField>
    <fullName>New_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>select class Id is enrolment type is group</description>
    <label>New Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Enrolments (New Class)</relationshipLabel>
    <relationshipName>Enrolments1</relationshipName>
    <type>Lookup</type>
</CustomField>