force-app/main/default/objects/Enrolment__c/fields/New_Lesson_Day__c.field-meta.xml
<CustomField>
    <fullName>New_Lesson_Day__c</fullName>
    <label>New Lesson Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Week_Days</valueSetName>
    </valueSet>
</CustomField>