force-app/main/default/objects/Enrolment__c/fields/New_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Package_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Package Id</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Enrolments (New Package Id)</relationshipLabel>
    <relationshipName>Enrolments1</relationshipName>
    <type>Lookup</type>
</CustomField>