force-app/main/default/objects/Enrolment__c/fields/New_Teacher__c.field-meta.xml
<CustomField>
    <fullName>New_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Teacher</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Teacher</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrolments (New Teacher)</relationshipLabel>
    <relationshipName>Enrolments5</relationshipName>
    <type>Lookup</type>
</CustomField>