force-app/main/default/objects/Enrolment__c/fields/Next_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Bill_Date__c</fullName>
    <formula>prepayment_period_end_date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Bill Date</label>
    <type>Date</type>
</CustomField>