force-app/main/default/objects/Enrolment__c/fields/Next_Lesson_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Next_Lesson_Start_time__c</fullName>
    <label>Next Lesson Start time</label>
    <type>Time</type>
</CustomField>