force-app/main/default/objects/Enrolment__c/fields/No_of_Stairs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Stairs__c</fullName>
    <description>this field for piano rental for manage customer number of stairs</description>
    <label>No. of Stairs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>