force-app/main/default/objects/Enrolment__c/fields/Notice_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_End_Date__c</fullName>
    <label>Notice Period End Date</label>
    <type>Date</type>
</CustomField>