force-app/main/default/objects/Enrolment__c/fields/Notice_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_Start_Date__c</fullName>
    <label>Notice Period Start Date</label>
    <type>Date</type>
</CustomField>