force-app/main/default/objects/Enrolment__c/fields/Offline_Signing_Selected__c.field-meta.xml
<CustomField>
    <fullName>Offline_Signing_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer selected offline sign option.</description>
    <inlineHelpText>Customer selected offline sign option.</inlineHelpText>
    <label>Offline Signing Selected</label>
    <type>Checkbox</type>
</CustomField>