force-app/main/default/objects/Enrolment__c/fields/Online_Enrolment_Status__c.field-meta.xml
<CustomField>
    <fullName>Online_Enrolment_Status__c</fullName>
    <label>Online Enrolment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Lessons</fullName>
            </value>
            <value>
                <fullName>Suspension of Lessons</fullName>
            </value>
            <value>
                <fullName>Proration of 2 Lessons</fullName>
            </value>
            <value>
                <fullName>New Enrolment Deferred</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Make Up Lessons</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Online Lessons (P)</fullName>
            </value>
            <value>
                <fullName>Online Lessons (S)</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Make Up Lessons (2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>