force-app/main/default/objects/Enrolment__c/fields/Package_Process_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Package_Process_Request_Date__c</fullName>
    <label>Advance Action Request Date</label>
    <type>Date</type>
</CustomField>