force-app/main/default/objects/Enrolment__c/fields/Package_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Package_Process_Status__c</fullName>
    <label>Advance Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>