force-app/main/default/objects/Enrolment__c/fields/Package_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Process_Type__c</fullName>
    <label>Advance Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Enrolment Change</fullName>
            </value>
            <value>
                <fullName>Centre Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>