force-app/main/default/objects/Enrolment__c/fields/Package_To_Be_Change__c.field-meta.xml
<CustomField>
    <fullName>Package_To_Be_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package To Be Change</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Enrolments (Package To Be Change)</relationshipLabel>
    <relationshipName>Enrolments2</relationshipName>
    <type>Lookup</type>
</CustomField>