force-app/main/default/objects/Enrolment__c/fields/Parent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_First_Name__c</fullName>
    <formula>Parent__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent First Name</label>
    <type>Text</type>
</CustomField>