force-app/main/default/objects/Enrolment__c/fields/Parent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Phone__c</fullName>
    <formula>Parent__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Phone</label>
    <type>Text</type>
</CustomField>