force-app/main/default/objects/Enrolment__c/fields/Piano_Pickup_date__c.field-meta.xml
<CustomField>
    <fullName>Piano_Pickup_date__c</fullName>
    <description>this field for piano rental for manage customer after  Termination then we get Piano Pickup date</description>
    <label>Piano Pickup date</label>
    <type>Date</type>
</CustomField>