force-app/main/default/objects/Enrolment__c/fields/PIN_code__c.field-meta.xml
<CustomField>
    <fullName>PIN_code__c</fullName>
    <description>this field for piano rental for manage customer  pin code</description>
    <label>PIN code</label>
    <type>Phone</type>
</CustomField>