force-app/main/default/objects/Enrolment__c/fields/Prepay_Duration__c.field-meta.xml
<CustomField>
    <fullName>Prepay_Duration__c</fullName>
    <formula>TEXT(Package__r.Promotion_period_In_months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepay Duration</label>
    <type>Text</type>
</CustomField>