force-app/main/default/objects/Enrolment__c/fields/prepayment_period_end_date__c.field-meta.xml
<CustomField>
    <fullName>prepayment_period_end_date__c</fullName>
    <label>prepayment period end date</label>
    <type>Date</type>
</CustomField>