force-app/main/default/objects/Enrolment__c/fields/prepayment_period_start_date__c.field-meta.xml
<CustomField>
    <fullName>prepayment_period_start_date__c</fullName>
    <label>prepayment period start date</label>
    <type>Date</type>
</CustomField>