force-app/main/default/objects/Enrolment__c/fields/Prepayment_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Request_Date__c</fullName>
    <label>Prepayment Request Date</label>
    <type>Date</type>
</CustomField>