force-app/main/default/objects/Enrolment__c/fields/Previous_Experience_if_any__c.field-meta.xml
<CustomField>
    <fullName>Previous_Experience_if_any__c</fullName>
    <label>Previous Experience (if any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>